# SE-W4-D3-Context-Engineering

./: README.md
context_engineering/: README.md  config.example.json  main_demo.py  pyproject.toml  requirements.txt
context_engineering/demos/: 1_context_write.py  2_context_select.py  3_context_compress.py  4_context_isolate.py  how_to_run_OpenAI_models.py
context_engineering/utils/: __init__.py  token_counter.py  visualizer.py
